--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -13,23 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'api_keys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-dcf81b45c1fe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Import API key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mapi_keys\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mweather_api_key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# Incorporated citipy to determine city based on latitude and longitude\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'api_keys'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -62,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "635"
+       "640"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,6 +93,145 @@
     "### Perform API Calls\n",
     "* Perform a weather check on each city using a series of successive API calls.\n",
     "* Include a print log of each city as it'sbeing processed (with the city number and city name).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generate a URL for the API query\n",
+    "url=\"http://api.openweathermap.org/data/2.5/weather?&appid=\" #set the initial api url equal to variable \"url\"\n",
+    "\n",
+    "for city in cities:\n",
+    "    full_url=url+weather_api_key+\"&q=\"+city\n",
+    "    requests.get(full_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get(full_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'coord': {'lon': -104.9847, 'lat': 39.7392}, 'weather': [{'id': 800, 'main': 'Clear', 'description': 'clear sky', 'icon': '01d'}], 'base': 'stations', 'main': {'temp': 273.18, 'feels_like': 270.08, 'temp_min': 272.04, 'temp_max': 274.26, 'pressure': 1017, 'humidity': 60}, 'visibility': 10000, 'wind': {'speed': 0.45, 'deg': 46, 'gust': 1.79}, 'clouds': {'all': 1}, 'dt': 1611787515, 'sys': {'type': 3, 'id': 2036196, 'country': 'US', 'sunrise': 1611756712, 'sunset': 1611792806}, 'timezone': -25200, 'id': 5419384, 'name': 'Denver', 'cod': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "den_url=url+weather_api_key+\"&q=\"+\"Denver\"\n",
+    "print(requests.get(den_url).json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_pull=requests.get(den_url).json() #assign the json to the weather_pull variable (stud)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'coord': {'lon': -104.9847, 'lat': 39.7392}, 'weather': [{'id': 800, 'main': 'Clear', 'description': 'clear sky', 'icon': '01d'}], 'base': 'stations', 'main': {'temp': 272.81, 'feels_like': 269.67, 'temp_min': 270.93, 'temp_max': 274.26, 'pressure': 1017, 'humidity': 60}, 'visibility': 10000, 'wind': {'speed': 0.45, 'deg': 328, 'gust': 1.34}, 'clouds': {'all': 1}, 'dt': 1611788264, 'sys': {'type': 3, 'id': 2036196, 'country': 'US', 'sunrise': 1611756712, 'sunset': 1611792806}, 'timezone': -25200, 'id': 5419384, 'name': 'Denver', 'cod': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weather_pull)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1611788264"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pull out relevant info out of JSON\n",
+    "city=weather_pull[\"sys\"][\"name\"]\n",
+    "long=weather_pull[\"coord\"][\"lon\"] #pull the longitude for the city and assign to the long variable\n",
+    "lat=weather_pull[\"coord\"][\"lat\"]\n",
+    "max_temp=((weather_pull[\"main\"][\"temp_max\"])-273.15)*1.8+32\n",
+    "humidity=weather_pull[\"main\"][\"humidity\"]\n",
+    "clouds=weather_pull[\"clouds\"][\"all\"]\n",
+    "wind_speed=weather_pull[\"wind\"][\"speed\"]\n",
+    "country=weather_pull[\"sys\"][\"country\"]\n",
+    "date=weather_pull[\"dt\"]\n",
+    "\n",
+    "#create a dictionary of all key info into a dictionary for each city \n",
+    "#create a list of all city dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_dic={\n",
+    "    \"City\": city,\n",
+    "    \"Lat\": lat,\n",
+    "    \"Lng\": long,\n",
+    "    \"Max Temp\": max_temp,\n",
+    "    \"Humidity\": humidity,\n",
+    "    \"Cloudiness\": clouds,\n",
+    "    \"Wind Speed\": wind_speed,\n",
+    "    \"Country\": country,\n",
+    "    \"Date\": date\n",
+    "}\n",
+    "city_info.append(city_dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_info=[] #create before jumping into the loop"
    ]
   },
   {
