--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "640"
+       "636"
       ]
      },
      "execution_count": 3,
@@ -97,16 +97,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-9ec5ba591b13>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m#pull out relevant info out of JSON\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweather_pull\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#pull the city name and assign to the city variable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mlong\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweather_pull\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"coord\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lon\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#pull the longitude for the city and assign to the long variable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mlat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweather_pull\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"coord\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lat\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#pull the latitude for the city and assign to the lat variable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'name'"
+     ]
+    }
+   ],
    "source": [
     "#generate a URL for the API query\n",
     "url=\"http://api.openweathermap.org/data/2.5/weather?&appid=\" #set the initial api url equal to variable \"url\"\n",
     "\n",
+    "city_info=[] #creates an empty list for all information about the city\n",
+    "\n",
+    "#gather all information for each city in the list of cities\n",
     "for city in cities:\n",
-    "    full_url=url+weather_api_key+\"&q=\"+city\n",
-    "    requests.get(full_url)"
+    "    full_url=url+weather_api_key+\"&q=\"+city #create a new api pull for each city in the cities list\n",
+    "    weather_pull=requests.get(full_url).json() #assign the new json to the weather_pull variable\n",
+    "    \n",
+    "    #pull out relevant info out of JSON\n",
+    "    name=weather_pull[\"name\"] #pull the city name and assign to the city variable\n",
+    "    long=weather_pull[\"coord\"][\"lon\"] #pull the longitude for the city and assign to the long variable\n",
+    "    lat=weather_pull[\"coord\"][\"lat\"] #pull the latitude for the city and assign to the lat variable\n",
+    "    max_temp=((weather_pull[\"main\"][\"temp_max\"])-273.15)*1.8+32 #pull the max temp for the city, convert from Kelvin to Farenheit and assign to the max temp variable\n",
+    "    humidity=weather_pull[\"main\"][\"humidity\"] #pull the city's humidity and assign to the humidity variable\n",
+    "    clouds=weather_pull[\"clouds\"][\"all\"] #pull the city's cloudiness and assign to the clouds variable\n",
+    "    wind_speed=weather_pull[\"wind\"][\"speed\"] #pull the city's wind speed and assig to the wind speed variable\n",
+    "    country=weather_pull[\"sys\"][\"country\"] #pull the city's country and assign to the country variable\n",
+    "    date=weather_pull[\"dt\"] #pull the date of the JSON and assign to the date variable\n",
+    "    \n",
+    "    city_dic={\n",
+    "        \"City\": name,\n",
+    "        \"Lat\": lat,\n",
+    "        \"Lng\": long,\n",
+    "        \"Max Temp\": max_temp,\n",
+    "        \"Humidity\": humidity,\n",
+    "        \"Cloudiness\": clouds,\n",
+    "        \"Wind Speed\": wind_speed,\n",
+    "        \"Country\": country,\n",
+    "        \"Date\": date\n",
+    "    } #create a dictionary with the infor for each city\n",
+    "    \n",
+    "    city_info.append(city_dic)"
    ]
   },
   {
@@ -131,33 +171,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'coord': {'lon': -104.9847, 'lat': 39.7392}, 'weather': [{'id': 800, 'main': 'Clear', 'description': 'clear sky', 'icon': '01d'}], 'base': 'stations', 'main': {'temp': 273.18, 'feels_like': 270.08, 'temp_min': 272.04, 'temp_max': 274.26, 'pressure': 1017, 'humidity': 60}, 'visibility': 10000, 'wind': {'speed': 0.45, 'deg': 46, 'gust': 1.79}, 'clouds': {'all': 1}, 'dt': 1611787515, 'sys': {'type': 3, 'id': 2036196, 'country': 'US', 'sunrise': 1611756712, 'sunset': 1611792806}, 'timezone': -25200, 'id': 5419384, 'name': 'Denver', 'cod': 200}\n"
-     ]
-    }
-   ],
-   "source": [
-    "den_url=url+weather_api_key+\"&q=\"+\"Denver\"\n",
-    "print(requests.get(den_url).json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weather_pull=requests.get(den_url).json() #assign the json to the weather_pull variable (stud)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -165,33 +178,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'coord': {'lon': -104.9847, 'lat': 39.7392}, 'weather': [{'id': 800, 'main': 'Clear', 'description': 'clear sky', 'icon': '01d'}], 'base': 'stations', 'main': {'temp': 272.81, 'feels_like': 269.67, 'temp_min': 270.93, 'temp_max': 274.26, 'pressure': 1017, 'humidity': 60}, 'visibility': 10000, 'wind': {'speed': 0.45, 'deg': 328, 'gust': 1.34}, 'clouds': {'all': 1}, 'dt': 1611788264, 'sys': {'type': 3, 'id': 2036196, 'country': 'US', 'sunrise': 1611756712, 'sunset': 1611792806}, 'timezone': -25200, 'id': 5419384, 'name': 'Denver', 'cod': 200}\n"
+      "{'coord': {'lon': -104.9847, 'lat': 39.7392}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 274.47, 'feels_like': 270.44, 'temp_min': 273.15, 'temp_max': 275.93, 'pressure': 1015, 'humidity': 79}, 'visibility': 10000, 'wind': {'speed': 2.55, 'deg': 213}, 'clouds': {'all': 100}, 'dt': 1611896587, 'sys': {'type': 3, 'id': 2011082, 'country': 'US', 'sunrise': 1611843065, 'sunset': 1611879278}, 'timezone': -25200, 'id': 5419384, 'name': 'Denver', 'cod': 200}\n",
+      "{'coord': {'lon': -104.9847, 'lat': 39.7392}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 274.47, 'feels_like': 270.44, 'temp_min': 273.15, 'temp_max': 275.93, 'pressure': 1015, 'humidity': 79}, 'visibility': 10000, 'wind': {'speed': 2.55, 'deg': 213}, 'clouds': {'all': 100}, 'dt': 1611896587, 'sys': {'type': 3, 'id': 2011082, 'country': 'US', 'sunrise': 1611843065, 'sunset': 1611879278}, 'timezone': -25200, 'id': 5419384, 'name': 'Denver', 'cod': 200}\n"
      ]
-    }
-   ],
-   "source": [
-    "print(weather_pull)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "1611788264"
+       "{'City': 'Denver',\n",
+       " 'Lat': 39.7392,\n",
+       " 'Lng': -104.9847,\n",
+       " 'Max Temp': 37.004000000000055,\n",
+       " 'Humidity': 79,\n",
+       " 'Cloudiness': 100,\n",
+       " 'Wind Speed': 2.55,\n",
+       " 'Country': 'US',\n",
+       " 'Date': 1611896587}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#test out the json file pull from the API (STUD)\n",
+    "den_url=url+weather_api_key+\"&q=\"+\"Denver\"\n",
+    "print(requests.get(den_url).json())\n",
+    "\n",
+    "weather_pull=requests.get(den_url).json() #assign the json to the weather_pull variable (stud)\n",
+    "\n",
+    "print(weather_pull)\n",
+    "\n",
+    "\n",
     "#pull out relevant info out of JSON\n",
-    "city=weather_pull[\"sys\"][\"name\"]\n",
+    "city=weather_pull[\"name\"]\n",
     "long=weather_pull[\"coord\"][\"lon\"] #pull the longitude for the city and assign to the long variable\n",
     "lat=weather_pull[\"coord\"][\"lat\"]\n",
     "max_temp=((weather_pull[\"main\"][\"temp_max\"])-273.15)*1.8+32\n",
@@ -202,15 +223,8 @@
     "date=weather_pull[\"dt\"]\n",
     "\n",
     "#create a dictionary of all key info into a dictionary for each city \n",
-    "#create a list of all city dictionaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#create a list of all city dictionaries\n",
+    "\n",
     "city_dic={\n",
     "    \"City\": city,\n",
     "    \"Lat\": lat,\n",
@@ -221,8 +235,10 @@
     "    \"Wind Speed\": wind_speed,\n",
     "    \"Country\": country,\n",
     "    \"Date\": date\n",
-    "}\n",
-    "city_info.append(city_dic)"
+    "} #create a dictionary with the infor for each city\n",
+    "city_dic\n",
+    "\n",
+    "#city_info.append(city_dic)"
    ]
   },
   {
@@ -230,9 +246,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "city_info=[] #create before jumping into the loop"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
