fixed the for loop to exclude cities not found in the API call

--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -97,18 +97,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-9ec5ba591b13>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m#pull out relevant info out of JSON\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweather_pull\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#pull the city name and assign to the city variable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mlong\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweather_pull\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"coord\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lon\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#pull the longitude for the city and assign to the long variable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mlat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweather_pull\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"coord\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lat\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#pull the latitude for the city and assign to the lat variable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n"
      ]
     }
    ],
@@ -120,34 +170,46 @@
     "\n",
     "#gather all information for each city in the list of cities\n",
     "for city in cities:\n",
+    "    \n",
     "    full_url=url+weather_api_key+\"&q=\"+city #create a new api pull for each city in the cities list\n",
-    "    weather_pull=requests.get(full_url).json() #assign the new json to the weather_pull variable\n",
+    "    try: #if the city appears in the api call\n",
+    "        weather_pull=requests.get(full_url).json() #assign the new json to the weather_pull variable\n",
     "    \n",
-    "    #pull out relevant info out of JSON\n",
-    "    name=weather_pull[\"name\"] #pull the city name and assign to the city variable\n",
-    "    long=weather_pull[\"coord\"][\"lon\"] #pull the longitude for the city and assign to the long variable\n",
-    "    lat=weather_pull[\"coord\"][\"lat\"] #pull the latitude for the city and assign to the lat variable\n",
-    "    max_temp=((weather_pull[\"main\"][\"temp_max\"])-273.15)*1.8+32 #pull the max temp for the city, convert from Kelvin to Farenheit and assign to the max temp variable\n",
-    "    humidity=weather_pull[\"main\"][\"humidity\"] #pull the city's humidity and assign to the humidity variable\n",
-    "    clouds=weather_pull[\"clouds\"][\"all\"] #pull the city's cloudiness and assign to the clouds variable\n",
-    "    wind_speed=weather_pull[\"wind\"][\"speed\"] #pull the city's wind speed and assig to the wind speed variable\n",
-    "    country=weather_pull[\"sys\"][\"country\"] #pull the city's country and assign to the country variable\n",
-    "    date=weather_pull[\"dt\"] #pull the date of the JSON and assign to the date variable\n",
+    "        #pull out relevant info out of JSON\n",
+    "        name=weather_pull[\"name\"] #pull the city name and assign to the city variable\n",
+    "        long=weather_pull[\"coord\"][\"lon\"] #pull the longitude for the city and assign to the long variable\n",
+    "        lat=weather_pull[\"coord\"][\"lat\"] #pull the latitude for the city and assign to the lat variable\n",
+    "        max_temp=((weather_pull[\"main\"][\"temp_max\"])-273.15)*1.8+32 #pull the max temp for the city, convert from Kelvin to Farenheit and assign to the max temp variable\n",
+    "        humidity=weather_pull[\"main\"][\"humidity\"] #pull the city's humidity and assign to the humidity variable\n",
+    "        clouds=weather_pull[\"clouds\"][\"all\"] #pull the city's cloudiness and assign to the clouds variable\n",
+    "        wind_speed=weather_pull[\"wind\"][\"speed\"] #pull the city's wind speed and assig to the wind speed variable\n",
+    "        country=weather_pull[\"sys\"][\"country\"] #pull the city's country and assign to the country variable\n",
+    "        date=weather_pull[\"dt\"] #pull the date of the JSON and assign to the date variable\n",
     "    \n",
-    "    city_dic={\n",
-    "        \"City\": name,\n",
-    "        \"Lat\": lat,\n",
-    "        \"Lng\": long,\n",
-    "        \"Max Temp\": max_temp,\n",
-    "        \"Humidity\": humidity,\n",
-    "        \"Cloudiness\": clouds,\n",
-    "        \"Wind Speed\": wind_speed,\n",
-    "        \"Country\": country,\n",
-    "        \"Date\": date\n",
-    "    } #create a dictionary with the infor for each city\n",
+    "        city_dic={\n",
+    "            \"City\": name,\n",
+    "            \"Lat\": lat,\n",
+    "            \"Lng\": long,\n",
+    "            \"Max Temp\": max_temp,\n",
+    "            \"Humidity\": humidity,\n",
+    "            \"Cloudiness\": clouds,\n",
+    "            \"Wind Speed\": wind_speed,\n",
+    "            \"Country\": country,\n",
+    "            \"Date\": date\n",
+    "        } #create a dictionary with the infor for each city\n",
     "    \n",
-    "    city_info.append(city_dic)"
+    "        city_info.append(city_dic) #add the city dictionary to the empty list\n",
+    "    except: #if the city doesn't appear in the api call\n",
+    "        print(\"City not found\") #print a message showing the city doesn't show up\n",
+    "        pass #continue with the for loop"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -246,7 +308,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "city"
+   ]
   },
   {
    "cell_type": "code",
