Filtered the weather dataframe to remove any cities with a humidity over 100%

--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -6847,7 +6847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -7005,7 +7005,7 @@
        "0.75     5.275000      NaN  1.611898e+09  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7015,9 +7015,161 @@
     "weather_quart=weather_df.quantile([.25, .5, .75]) #find the quantiles of the dataframe\n",
     "\n",
     "weather_sum=weather_df.agg([\"count\", \"mean\", \"std\", \"min\", \"max\"]) #aggregate the dataframe to find the summary stats\n",
-    "weather_sum.drop([\"City\", \"Country\"], axis=1) #drop the city and country columns from the summary stats dataframe\n",
     "\n",
-    "weather_sum.append(weather_quart)"
+    "full_sum=weather_sum.append(weather_quart) #add the quantiles to the dataframe\n",
+    "full_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>583.000000</td>\n",
+       "      <td>583.000000</td>\n",
+       "      <td>583.000000</td>\n",
+       "      <td>583.000000</td>\n",
+       "      <td>583.000000</td>\n",
+       "      <td>583.000000</td>\n",
+       "      <td>5.830000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-54.800000</td>\n",
+       "      <td>-179.166700</td>\n",
+       "      <td>-49.360000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>1.611898e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>78.218600</td>\n",
+       "      <td>178.416700</td>\n",
+       "      <td>98.600000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>18.120000</td>\n",
+       "      <td>1.611898e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>19.808833</td>\n",
+       "      <td>17.921626</td>\n",
+       "      <td>48.862480</td>\n",
+       "      <td>73.900515</td>\n",
+       "      <td>55.404803</td>\n",
+       "      <td>3.839846</td>\n",
+       "      <td>1.611898e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>33.547405</td>\n",
+       "      <td>91.226956</td>\n",
+       "      <td>33.019425</td>\n",
+       "      <td>19.025134</td>\n",
+       "      <td>39.407390</td>\n",
+       "      <td>2.755131</td>\n",
+       "      <td>9.683145e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.25</th>\n",
+       "      <td>-8.512700</td>\n",
+       "      <td>-63.027250</td>\n",
+       "      <td>26.654000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>16.500000</td>\n",
+       "      <td>1.650000</td>\n",
+       "      <td>1.611898e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.5</th>\n",
+       "      <td>22.233300</td>\n",
+       "      <td>20.225100</td>\n",
+       "      <td>59.162000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>3.090000</td>\n",
+       "      <td>1.611898e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.75</th>\n",
+       "      <td>47.904200</td>\n",
+       "      <td>102.016100</td>\n",
+       "      <td>75.398000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>5.275000</td>\n",
+       "      <td>1.611898e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Lat         Lng    Max Temp    Humidity  Cloudiness  Wind Speed  \\\n",
+       "count  583.000000  583.000000  583.000000  583.000000  583.000000  583.000000   \n",
+       "min    -54.800000 -179.166700  -49.360000   15.000000    0.000000    0.020000   \n",
+       "max     78.218600  178.416700   98.600000  100.000000  100.000000   18.120000   \n",
+       "mean    19.808833   17.921626   48.862480   73.900515   55.404803    3.839846   \n",
+       "std     33.547405   91.226956   33.019425   19.025134   39.407390    2.755131   \n",
+       "0.25    -8.512700  -63.027250   26.654000   64.000000   16.500000    1.650000   \n",
+       "0.5     22.233300   20.225100   59.162000   79.000000   69.000000    3.090000   \n",
+       "0.75    47.904200  102.016100   75.398000   88.000000   96.000000    5.275000   \n",
+       "\n",
+       "               Date  \n",
+       "count  5.830000e+02  \n",
+       "min    1.611898e+09  \n",
+       "max    1.611898e+09  \n",
+       "mean   1.611898e+09  \n",
+       "std    9.683145e+01  \n",
+       "0.25   1.611898e+09  \n",
+       "0.5    1.611898e+09  \n",
+       "0.75   1.611898e+09  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_sum_df=full_sum.drop([\"City\", \"Country\"], axis=1) #drop the city and country columns from the dataframe\n",
+    "weather_sum_df"
    ]
   },
   {
@@ -7178,6 +7330,230 @@
     "## Inspect the data and remove the cities where the humidity > 100%.\n",
     "----\n",
     "Skip this step if there are no cities that have humidity > 100%. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>546</th>\n",
+       "      <td>Liezen</td>\n",
+       "      <td>47.5667</td>\n",
+       "      <td>14.2333</td>\n",
+       "      <td>33.998</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>1611898421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Batelov</td>\n",
+       "      <td>49.3143</td>\n",
+       "      <td>15.3947</td>\n",
+       "      <td>33.008</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>CZ</td>\n",
+       "      <td>1611897985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>La Palma</td>\n",
+       "      <td>33.8464</td>\n",
+       "      <td>-118.0467</td>\n",
+       "      <td>55.400</td>\n",
+       "      <td>100</td>\n",
+       "      <td>90</td>\n",
+       "      <td>9.77</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1611898326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Kozluk</td>\n",
+       "      <td>38.1938</td>\n",
+       "      <td>41.4885</td>\n",
+       "      <td>39.200</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>1611898318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>Oga</td>\n",
+       "      <td>46.4631</td>\n",
+       "      <td>10.3470</td>\n",
+       "      <td>42.008</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>1611898425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>Raja</td>\n",
+       "      <td>8.4596</td>\n",
+       "      <td>25.6780</td>\n",
+       "      <td>72.050</td>\n",
+       "      <td>19</td>\n",
+       "      <td>52</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>1611898380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>Bhuj</td>\n",
+       "      <td>23.2667</td>\n",
+       "      <td>69.6667</td>\n",
+       "      <td>74.606</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.43</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1611898394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Upleta</td>\n",
+       "      <td>21.7333</td>\n",
+       "      <td>70.2833</td>\n",
+       "      <td>78.638</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.02</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1611898344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Gogrial</td>\n",
+       "      <td>8.5332</td>\n",
+       "      <td>28.1004</td>\n",
+       "      <td>77.396</td>\n",
+       "      <td>16</td>\n",
+       "      <td>68</td>\n",
+       "      <td>3.46</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>1611898314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>Marabba</td>\n",
+       "      <td>12.3500</td>\n",
+       "      <td>32.1833</td>\n",
+       "      <td>73.472</td>\n",
+       "      <td>15</td>\n",
+       "      <td>34</td>\n",
+       "      <td>7.41</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>1611898388</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>583 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         City      Lat       Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "546    Liezen  47.5667   14.2333    33.998       100          75        1.54   \n",
+       "9     Batelov  49.3143   15.3947    33.008       100         100        1.88   \n",
+       "237  La Palma  33.8464 -118.0467    55.400       100          90        9.77   \n",
+       "57     Kozluk  38.1938   41.4885    39.200       100          75        3.09   \n",
+       "568       Oga  46.4631   10.3470    42.008       100          75        1.03   \n",
+       "..        ...      ...       ...       ...       ...         ...         ...   \n",
+       "347      Raja   8.4596   25.6780    72.050        19          52        3.75   \n",
+       "422      Bhuj  23.2667   69.6667    74.606        19           0        5.43   \n",
+       "178    Upleta  21.7333   70.2833    78.638        17           0        6.02   \n",
+       "37    Gogrial   8.5332   28.1004    77.396        16          68        3.46   \n",
+       "393   Marabba  12.3500   32.1833    73.472        15          34        7.41   \n",
+       "\n",
+       "    Country        Date  \n",
+       "546      AT  1611898421  \n",
+       "9        CZ  1611897985  \n",
+       "237      US  1611898326  \n",
+       "57       TR  1611898318  \n",
+       "568      IT  1611898425  \n",
+       "..      ...         ...  \n",
+       "347      SS  1611898380  \n",
+       "422      IN  1611898394  \n",
+       "178      IN  1611898344  \n",
+       "37       SS  1611898314  \n",
+       "393      SD  1611898388  \n",
+       "\n",
+       "[583 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#determine if any cities have a humidity >100%\n",
+    "weather_df.sort_values(by=\"Humidity\", ascending=False) #sort through the weather dataframe to get the humidity levels of each city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#no cities with humidity over 100%"
    ]
   },
   {
