Found the closest hotel in the final dataframe, added them to the dataframe, and added a marker layer to my gmaps figure

--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "636"
+       "598"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -158,13 +158,18 @@
       "City not found\n",
       "City not found\n",
       "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
+      "City not found\n",
       "City not found\n"
      ]
     }
    ],
    "source": [
     "#generate a URL for the API query\n",
-    "url=\"http://api.openweathermap.org/data/2.5/weather?&appid=\" #set the initial api url equal to variable \"url\"\n",
+    "url=\"http://api.openweathermap.org/data/2.5/weather?&appid=\" #set the initial api url equal to variable \"maps_url\"\n",
     "\n",
     "city_info=[] #creates an empty list for all information about the city\n",
     "\n",
